--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "turbo-dev",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://yellow-grass-06efd4c10.3.azurestaticapps.net", 
+  "homepage": "https://yellow-grass-06efd4c10.3.azurestaticapps.net/",
   "dependencies": {
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
@@ -22,7 +22,7 @@
     "react-dom": "^18.2.0",
     "react-fullpage": "^0.1.19",
     "react-router-dom": "^6.14.2",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
