--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "turbo-dev",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://mango-moss-076ac4110.3.azurestaticapps.net/",
   "dependencies": {
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
